[package]
name = "hacker"
version = "0.1.0"
authors = ["jodon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["postgres"] }
serde = "1.0.126"
dotenv = "0.15.0"
tera = "1.10.0"


[dev-dependencies]
actix-rt = "1.1.1"
